# wg-reresolve-dns

./: .gitignore  Cargo.toml  PKGBUILD  README.md  wg-networkd-reresolve-dns@.service  wg-reresolve-dns@.service
.github/workflows/: ci.yml
src/: main.rs  networkd.rs  wireguard_api.rs  wireguard_config.rs
test-data/: invalid.conf  multiple_peers.conf  no_endpoint.conf
