[package]
name = "wg-reresolve-dns"
description = "Re-resolve DNS of endpoints for Wireguard interfaces"
version = "2.0.3"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive", "env"] }
rust-ini = "0.21.0"
wireguard-uapi = "3.0.0"
humantime = "2.1.0"
log = "0.4.22"
base64 = "0.22.1"
simple_logger = {version = "5.0.0", default-features = false }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
